test/compile_errors/stage1/obj/ignored_comptime_statement_value.zig
export fn foo() void {
    comptime {1;}
}

// ignored comptime statement value
//
// tmp.zig:2:15: error: expression value is ignored
